--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/bancoquarkus
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation = drop-and-create
 quarkus.hibernate-orm.log.sql=true
+
+#DEV
+%dev.isbn.suffix=DEV
