--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,12 @@ quarkus.hibernate-orm.log.sql=true
 
 #DEV
 %dev.isbn.suffix=DEV
+
+
+
+excepcion.002 = No existe el id del customer
+excepcion.003 = se registro correctamente el customer
+excepcion.004 = se actualizo correctamente el customer
+excepcion.005 = se elimino correctamente el customer
+
+error.generic = ocurrio un error en el sistema
