--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 quarkus.http.port=9279
 # configure your datasource
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = postgres
-quarkus.datasource.password = example
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/bancoquarkus
+quarkus.datasource.username = bq
+quarkus.datasource.password = bq
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5566/bancoquarkus
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation = drop-and-create
