Agregando estado al registro cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ quarkus.hibernate-orm.log.sql=true
 %dev.isbn.suffix=DEV
 
 
+state.valor.activo=A
+state.valor.inactivo=I
 
 excepcion.002 = No existe el id del customer
 excepcion.003 = se registro correctamente el customer
