Realizando algunos ajustes customer v1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,13 @@ quarkus.hibernate-orm.log.sql=true
 state.valor.activo=A
 state.valor.inactivo=I
 
+mensaje.http.422=Unprocessable Entity
+mensaje.http.404=Not Found
+
 excepcion.002 = No existe el id del customer
 excepcion.003 = se registro correctamente el customer
 excepcion.004 = se actualizo correctamente el customer
 excepcion.005 = se elimino correctamente el customer
+excepcion.006 = No se pudo registrar el cliente, volver a intentarlo
 
 error.generic = ocurrio un error en el sistema
