--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5566/bancoquarkus
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation = drop-and-create
 quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.sql-load-script=import.sql
 
 #DEV
 %dev.isbn.suffix=DEV
@@ -16,13 +17,13 @@ quarkus.hibernate-orm.log.sql=true
 state.valor.activo=A
 state.valor.inactivo=I
 
-mensaje.http.422=Unprocessable Entity
-mensaje.http.404=Not Found
+mensaje.http.422=Unprocessable Entity.
+mensaje.http.404=Not Found.
 
-excepcion.002 = No existe el id del customer
-excepcion.003 = se registro correctamente el customer
-excepcion.004 = se actualizo correctamente el customer
-excepcion.005 = se elimino correctamente el customer
-excepcion.006 = No se pudo registrar el cliente, volver a intentarlo
+excepcion.002 = No existe el id del customer.
+excepcion.003 = Exitoso.
+excepcion.004 = se actualizo correctamente el customer.
+excepcion.005 = se elimino correctamente el customer.
+excepcion.006 = No se pudo registrar el cliente, volver a intentarlo.
 
-error.generic = ocurrio un error en el sistema
+error.generic = ocurrio un error en el sistema.
