--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
       <version>1.18.24</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-openapi</artifactId>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
