--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,14 @@ excepcion.005 = se elimino correctamente el customer.
 excepcion.006 = No se pudo registrar el cliente, volver a intentarlo.
 
 error.generic = ocurrio un error en el sistema.
+
+## OPENAPI
+quarkus.smallrye-openapi.info-title=API para la Gestión de Clientes
+quarkus.smallrye-openapi.info-version=1.0.1
+quarkus.smallrye-openapi.info-description=API permite Gestionar Clientes
+quarkus.smallrye-openapi.info-terms-of-service=https://pe.nttdata.com/
+quarkus.smallrye-openapi.info-contact-email=acespedc@nttdata.com
+quarkus.smallrye-openapi.info-contact-name=Alfonso Victor Cespedes Cerna
+quarkus.smallrye-openapi.info-contact-url=https://github.com/AppBancoQuarkus/mscustomer
+quarkus.smallrye-openapi.info-license-name=Apache 2.0
+quarkus.smallrye-openapi.info-license-url=https://www.apache.org/licenses/LICENSE-2.0.html
